--- a/sass/layouts/_filters.scss
+++ b/sass/layouts/_filters.scss
@@ -2,7 +2,7 @@
     display: flex;
     
     justify-content: center;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 
     & .item:not(:last-child){
     margin-right: 8px;}
@@ -10,9 +10,16 @@
     @media screen and (max-width: 767px){
         flex-wrap: wrap;
         justify-content: start;
+        gap: 15px 8px;
     }
 
-    @media screen and (mix-width: 768px){
+    @media screen and (min-width: 768px){
         justify-content: center;
+        margin-bottom: 30px;
+    }
+
+    @media screen and (min-width: 1200px){
+        justify-content: center;
+        margin-bottom: 50px;
     }
 }
